// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateSeparatorView > renders default story 1`] = `
<div>
  <div
    aria-label="Today"
    class="flex timelineSeparator"
    role="separator"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <hr
      role="none"
    />
    <div
      class="flex content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <h2
        aria-hidden="true"
      >
        Today
      </h2>
    </div>
    <hr
      role="none"
    />
  </div>
</div>
`;

exports[`DateSeparatorView > renders long localized label story 1`] = `
<div>
  <div
    aria-label="Wednesday, December 17, 2025 at 11:59 PM Coordinated Universal Time"
    class="flex timelineSeparator"
    role="separator"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <hr
      role="none"
    />
    <div
      class="flex content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <h2
        aria-hidden="true"
      >
        Wednesday, December 17, 2025 at 11:59 PM Coordinated Universal Time
      </h2>
    </div>
    <hr
      role="none"
    />
  </div>
</div>
`;

exports[`DateSeparatorView > renders with extra class names 1`] = `
<div>
  <div
    aria-label="Today"
    class="flex extra_class_1 extra_class_2 timelineSeparator"
    role="separator"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <hr
      role="none"
    />
    <div
      class="flex content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
    >
      <h2
        aria-hidden="true"
      >
        Today
      </h2>
    </div>
    <hr
      role="none"
    />
  </div>
</div>
`;

exports[`DateSeparatorView > renders with jump to date picker story 1`] = `
<div>
  <div
    class="flex timelineSeparator"
    role="none"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <hr
      role="none"
    />
    <span
      tabindex="-1"
    >
      <div
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Jump to date"
        aria-live="off"
        class="flex content"
        data-state="closed"
        data-testid="jump-to-date-separator-button"
        id="radix-_r_4_"
        role="button"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
        tabindex="0"
        type="button"
      >
        <h2
          aria-hidden="true"
        >
          Today
        </h2>
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
          />
        </svg>
      </div>
    </span>
    <hr
      role="none"
    />
  </div>
</div>
`;
